# ic-mcp-examples

./: .gitignore  README.md
basic-solana/: Cargo.toml  README.md
basic-solana/src/: main.rs
bitcoin-wallet/: .gitignore  README.md  bitcoin.conf  build.sh  canister_ids.json  dfx.json  index.html  package.json  pnpm-lock.yaml
bitcoin-wallet/src/backend/: Cargo.toml  backend.did
bitcoin-wallet/src/backend/declarations/: backend.did.d.ts  backend.did.js
bitcoin-wallet/src/backend/src/: btc.rs  lib.rs  p2tr.rs  schnorr.rs
bitcoin-wallet/src/backend/src/service/: get_address.rs  get_balance.rs  mod.rs  send_btc.rs
bitcoin-wallet/src/frontend/: App.tsx  index.css
bitcoin-wallet/src/frontend/components/: balance.tsx  btc-address.tsx  iframe-warning.tsx  login.tsx  logout.tsx  receive-button.tsx  send-button.tsx  send-confirmation.tsx  wallet.tsx
bitcoin-wallet/src/frontend/hooks/: useBtcAddress.tsx  useBtcBalance.tsx
bitcoin-wallet/src/frontend/lib/: btc.ts  utils.ts
encrypted-notes-rust/: dfx.json
encrypted-notes-rust/backend/src/: lib.rs
encrypted-notes-rust/frontend/: package-lock.json
encrypted-notes/frontend/: package-lock.json
receive-icp/: README.md
